# loopfuse

./: .gitignore  README.md  pyproject.toml
loopfuse/: __init__.py  codegen.py  ir.py  optimize.py
loopfuse/compiler/: helpers.py  sympy_converter.py
loopfuse/compiler/passes/: __init__.py  cleanup_passes.py  factor_acc.py  fuse.py  skip_loop_iterations.py
loopfuse/torch_backend/: __init__.py  custom_functions.py  interface.py  ops.py
tests/: benchmark.py  test_accuracy.py  test_attention.py  test_compiler.py  test_passes.py
