[project]
name = "loopfuse"
version = "0.1.0"
description = "Compiler for loop fusion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "triton",
    "z3-solver",
    "pytest",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
